src/objects/OneStopQueues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>ProfileName</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <inlineHelpText>Insert 15 characters Id</inlineHelpText>
        <label>Queue Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OneStopQueues</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>ProfileName__c</columns>
        <columns>Queue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
</CustomObject>